# Fast-Reformer

./: .gitignore  CMakeLists.txt  README.md  make.sh  rebuild.sh  test.sh
examples/: example.py
reformer/inference/: CMakeLists.txt  infer.cu  kernels.cu  kernels.cuh  models.cu  models.cuh  utils.cuh
tests/: config.json  profile.py  profile_fp16.py  profile_fp32.py  test.py  test_fp16.py  test_fp32.py  test_models.py
tests/cpp/: CMakeLists.txt  test_kernels.cu  test_models.cu
